.jjconflict-side-1/apps/syncthing/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: syncthing
      app.kubernetes.io/name: syncthing
  serviceName: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: syncthing
        app.kubernetes.io/name: syncthing
    spec:
      containers:
        - name: syncthing
          image: syncthing
          livenessProbe:
            httpGet:
              path: /rest/noauth/health
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 8384
            - name: sync
              containerPort: 22000
              protocol: TCP
            - name: sync-udp
              containerPort: 22000
              protocol: UDP
            - name: discovery
              containerPort: 21027
              protocol: UDP
          readinessProbe:
            httpGet:
              path: /rest/noauth/health
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 180
            httpGet:
              path: /rest/noauth/health
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
          securityContext:
            capabilities:
              add:
                - SETGID
                - SETUID
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: syncthing-config
