.jjconflict-side-1/apps/syncthing/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing
spec:
  rules:
    - backendRefs:
        - name: syncthing
          port: 8384
